# mmf

./: blob2db.py  blob2export.py  compress.sh  db2img.py  db2tfrecords.py  do_local.sh  downloadboard.py  go_cloud.sh  log2db.py  net2log.py  predict.py  read_tfrecords.py  sb.py  setup.cfg  setup.py  train.py  updatedb.py  upload.py
agent/: apex.py  base.py  deepq.py  dqn.py  dummy_agent.py  sb.py  trainer.py
dl/: tfrecords.py  train.py
doc/: book.py  index.md  install_env.md
env/: __init__.py  dummy.py  log.py  rl.py  trade.py
gcp/: storage.py
log/: bitmex.py  bitws.py  commands.py  constant.py  dbgen.py  dbloader.py  encoder.py  loader.py  logdb.py  plot.py  plot3d.py  price.py  qvalue.py  realtime.py  select_tffile.py  timeutil.py
note/: tfrecords.ipynb
systemd/: bitlog.service  bitlog.timer
test/: bitws_test.py  data.py  gcpstorage_test.py  logdb_test.py  logloader_test.py  price_test.py  readtime_test.py  timeutil_test.py
test/agent/: apex.py  apex_test.py
test/ak/: autokeras_test.py
test/dl/: autokeras_test.py  keras_test.py  keras_tutorial_test.py  sci_test.py  tensorflow_file_test.py  tensorflow_simple_test.py  tensorflow_test.py  train_test.py
test/env/: rl.py  trade_test.py
test/log/: SparseLine_test.py  dbgen_test.py  log_test.py  logdb_test.py  price_board_test.py  qvalue_test.py  qvalue_testdata.py  sparse_matrix_test.py  sparse_test.py
util/: blob2blob.sh  install_docker_ce.sh  install_gpu_step1.sh  install_gpu_step2.sh  install_nvidia_docker.sh
util/datagenerator_container/: Dockerfile  docker_build.sh  (+1 more)
venvw/: pyvenv.cfg
(+16 files in other folders)
