[metadata]
name = mmf
version = 0.1.0
classifier =
    Development Status :: 1 - Planning
    Programming Language :: Python
    Operating System :: POSIX
    Programming Language :: Python :: 3
[options]
install_requires = google-cloud-storage
                   gym
                   numpy
                   matplotlib
                   sklearn
                   websocket-client==0.47
zip_safe = False
packages = find:
